# movie_recommender_system

./: .gitattributes  .gitignore  README.md  Untitled.ipynb  Untitled67.ipynb  app.py  nlp.pkl  nlp_model.ipynb  pyproject.toml  vectorizer.pkl
artefacts/: nlp.pkl  vectorizers.pkl
